[package]
name = "eneste"
version = "0.1.0"
edition = "2024"

[features]
executor = []
sink = ["futures-sink"]
std = []

compio = ["std", "dep:compio"]

[dependencies]
futures-core = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2" }
futures-sink = { version = "0.3", default-features = false, optional = true }

compio = { version = "0.19.0", optional = true }


[dev-dependencies]
pollster = "0.4"
